# mvn

./: .gitignore  README.md  mvn.mplstyle  pyproject.toml
experiments/benchmarks/: config.json  config1.json  config2.json  generate.py  plots.py
experiments/correctness/: correlation.py  estimation.py
src/mvn/: __init__.py  covariance.py  data.py  model.py  utils.py
